feat: add getDelegations API v2